--- a/resources/html/help/help.css
+++ b/resources/html/help/help.css
@@ -21,9 +21,12 @@ body {
 .container {
   width: 788px;
   padding: 20px 15px 10px 15px;
-  background-image: url(../../img/bg.webp);
-  background-size: 100%;
+  background-image: url(../../img/bg.jpg);
+  background-size: cover; /* 自动拉伸以覆盖容器 */
+  background-position: top center; /* 背景图片上边对齐，水平居中 */
+  background-repeat: no-repeat; /* 防止背景图片重复 */
 }
+
 .head_box {
   border-radius: 15px;
   font-family: 'tttgbnumber';
@@ -35,15 +38,18 @@ body {
 }
 .head_box .id_text {
   font-size: 24px;
+  color: #616161 /*#999*/;
 }
 .head_box .day_text {
   font-size: 20px;
+  color: #757575 /*#999*/;
 }
 .head_box .genshin_logo {
   position: absolute;
   top: -10px;
   right: 15px;
   width: 97px;
+  transform: scale(0.7); 
 }
 .base_info {
   position: relative;
@@ -107,13 +113,14 @@ body {
   display: flex;
   align-items: center;
   color: white;
-  background: transparent;
-  box-shadow: 0 0 1px 0 #ccc, 2px 2px 4px 0 rgba(50, 50, 50, 0.8);
+  background: rgba(250, 250, 250, 0.8); /* 设置为不透明背景色 */
+  box-shadow: 0 0 1px 0 #ccc, 2px 2px 4px 0 rgba(50, 50, 50, 0.8); /* 可以保留阴影效果 */
   padding: 8px 6px 8px 6px;
   border-radius: 8px;
   margin: 0 0px 10px 10px;
-  backdrop-filter: blur(10px);
+  /* 移除毛玻璃效果 */
 }
+
 .list .item .icon{
   width: 24px;
   height: 24px;
@@ -124,6 +131,7 @@ body {
 }
 .list .item .title{
   font-size: 16px;
+  color: #757575 /*#999*/;
   margin-left: 6px;
   line-height: 20px;
 }
@@ -132,7 +140,7 @@ body {
 } */
 .list .item .title .dec{
   font-size: 12px;
-  color: #FBEFFB /*#999*/;
+  color: #999 /*#999*/;
   margin-top: 2px;
 }
 .logo{
